:fire: Package.json name chnges

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "learning",
+  "name": "esha",
   "version": "1.0.0",
   "description": "cool way to generate busines card :D",
   "main": "./bin/cli.js",
